--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
+        <span>B</span>
+        <span>U</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-    </div>
-    <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
-    </div>
+        <span>T</span>
+        <span> </span>
+        <span>J</span>
+        <span>A</span>
+        <span>N</span>
+        <span>E</span>
+        
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik aku</a>
         </button>
         
     </div>
